--- a/index.html
+++ b/index.html
@@ -19,29 +19,20 @@
                 <a class="a ac" href="#">AC</a>
                 <a class="a slash" href="#">/</a>
                 <a class="a x" href="#">x</a>
-            </div>
-            <div class="line">
                 <a class="a seven"href="#">7</a>
                 <a class="a eight"href="#">8</a>
                 <a class="a nine"href="#">9</a>
                 <a class="a dash"href="#">-</a>
-            </div>
-            <div class="line">
                 <a class="a four"href="#">4</a>
                 <a class="a five"href="#">5</a>
                 <a class="a six"href="#">6</a>
                 <a class="a plus"href="#">+</a>
-            </div>
-
-            <div class="foot">
-                <div>
-                    <a class="b one"href="#">1</a>
-                    <a class="b two"href="#">2</a>
-                    <a class="b three"href="#">3</a>
-                    <a class="b zero"href="#">0</a>
-                    <a class="b dot"href="#">.</a>
-                </div>
-                <a id="equal" href="#">=</a>
+                <a class="a one"href="#">1</a>
+                <a class="a two"href="#">2</a>
+                <a class="a three"href="#">3</a>
+                <a class="a zero"href="#">0</a>
+                <a class="a dot"href="#">.</a>
+                <a class="a equal" href="#">=</a>
             </div>
         </div>
     </section>
