--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="a c" href="#">C</a>
                 <a class="a ac" href="#">AC</a>
                 <a class="a slash" href="#">/</a>
-                <a class="a x" href="#">x</a>
+                <a class="a x" href="#">*</a>
                 <a class="a seven"href="#">7</a>
                 <a class="a eight"href="#">8</a>
                 <a class="a nine"href="#">9</a>
