--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <div class="button">
             <div class="line">
-                <a class="a c" href="#">C</a>
-                <a class="a ac" href="#">AC</a>
+                <a class="a c" href="#">AC</a>
+                <a class="a ac" href="#">C</a>
                 <a class="a slash" href="#">/</a>
                 <a class="a x" href="#">*</a>
                 <a class="a seven"href="#">7</a>
