--- a/index.html
+++ b/index.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-    
     <link rel="stylesheet" href="./styles.css">
-    <title>Evi->Calculator</title>
+    <title>Evi -> Calculator</title>
 </head>
 
 <body class="background">
-    <section class="square">
-        <div class="placeholder">
-            <input id="display" placeholder="0" disabled>
-        </div>
+    <div class="grid-container">
+        <input id="display" placeholder="0" aria-label="Calculator display" disabled>
 
-        <div class="button">
-            <div class="line">
-                <a class="a c" href="#">AC</a>
-                <a class="a ac" href="#">C</a>
-                <a class="a slash" href="#">/</a>
-                <a class="a x" href="#">*</a>
-                <a class="a seven"href="#">7</a>
-                <a class="a eight"href="#">8</a>
-                <a class="a nine"href="#">9</a>
-                <a class="a dash"href="#">-</a>
-                <a class="a four"href="#">4</a>
-                <a class="a five"href="#">5</a>
-                <a class="a six"href="#">6</a>
-                <a class="a plus"href="#">+</a>
-                <a class="a one"href="#">1</a>
-                <a class="a two"href="#">2</a>
-                <a class="a three"href="#">3</a>
-                <a class="a zero"href="#">0</a>
-                <a class="a dot"href="#">.</a>
-                <a class="a equal" href="#">=</a>
-            </div>
-        </div>
-    </section>
-
+        <a class="a c" href="#">AC</a>
+        <a class="a ac" href="#">C</a>
+        <a class="a slash" href="#">/</a>
+        <a class="a x" href="#">*</a>
+        <a class="a seven"href="#">7</a>
+        <a class="a eight"href="#">8</a>
+        <a class="a nine"href="#">9</a>
+        <a class="a dash"href="#">-</a>
+        <a class="a four"href="#">4</a>
+        <a class="a five"href="#">5</a>
+        <a class="a six"href="#">6</a>
+        <a class="a plus"href="#">+</a>
+        <a class="a one"href="#">1</a>
+        <a class="a two"href="#">2</a>
+        <a class="a three"href="#">3</a>
+        <a class="a zero"href="#">0</a>
+        <a class="a dot"href="#">.</a>
+        <a class="a equal" href="#">=</a>
+    </div>
     <script src="index.js"></script>
 </body>
+
 </html>
